// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Health check route /features should shows the Defra Forms Website Features 1`] = `
"<!DOCTYPE html>
<html lang="en" class="govuk-template">
  <head>
    <meta charset="utf-8">
    <title>Defra Forms: Features - Forms designer</title>
    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
    <meta name="theme-color" content="#0b0c0c">

      <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico">
      <link rel="icon" sizes="any" href="/assets/images/favicon.svg" type="image/svg+xml">
      <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c">
      <link rel="apple-touch-icon" href="/assets/images/govuk-icon-180.png">
      <link rel="manifest" href="/assets/manifest.json">

  <meta name="application-name" content="@defra/forms-designer" data-environment="local">
  <meta name="robots" content="noindex, nofollow">
  <link href="/stylesheets/application.scss" rel="stylesheet">

  </head>
  <body class="govuk-template__body defra-forms-website">
    <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>

      <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>


<header class="cross-service-header" role="banner" data-module="one-login-header">
  <div class="one-login-header" data-one-login-header-nav>
    <div class="one-login-header__container govuk-width-container app-width-container--wide">
      <div class="one-login-header__logo">
        <a href="/" class="one-login-header__link one-login-header__link--homepage">
          <span class="one-login-header__logotype">
            <!--[if gt IE 8]><!-->
              <svg
                aria-hidden="true"
                focusable="false"
                class="one-login-header__logotype-crown"
                xmlns="http://www.w3.org/2000/svg"
                viewBox="0 0 32 30"
                height="30"
                width="32">
                <path fill="currentColor" fill-rule="evenodd" d="M22.6 10.4c-1 .4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s-.1 2-1 2.4m-5.9 6.7c-.9.4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s-.1 2-1 2.4m10.8-3.7c-1 .4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s0 2-1 2.4m3.3 4.8c-1 .4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s-.1 2-1 2.4M17 4.7l2.3 1.2V2.5l-2.3.7-.2-.2.9-3h-3.4l.9 3-.2.2c-.1.1-2.3-.7-2.3-.7v3.4L15 4.7c.1.1.1.2.2.2l-1.3 4c-.1.2-.1.4-.1.6 0 1.1.8 2 1.9 2.2h.7c1-.2 1.9-1.1 1.9-2.1 0-.2 0-.4-.1-.6l-1.3-4c-.1-.2 0-.2.1-.3m-7.6 5.7c.9.4 2-.1 2.4-1 .4-.9-.1-2-1-2.4-.9-.4-2 .1-2.4 1s0 2 1 2.4m-5 3c.9.4 2-.1 2.4-1 .4-.9-.1-2-1-2.4-.9-.4-2 .1-2.4 1s.1 2 1 2.4m-3.2 4.8c.9.4 2-.1 2.4-1 .4-.9-.1-2-1-2.4-.9-.4-2 .1-2.4 1s0 2 1 2.4m14.8 11c4.4 0 8.6.3 12.3.8 1.1-4.5 2.4-7 3.7-8.8l-2.5-.9c.2 1.3.3 1.9 0 2.7-.4-.4-.8-1.1-1.1-2.3l-1.2 4c.7-.5 1.3-.8 2-.9-1.1 2.5-2.6 3.1-3.5 3-1.1-.2-1.7-1.2-1.5-2.1.3-1.2 1.5-1.5 2.1-.1 1.1-2.3-.8-3-2-2.3 1.9-1.9 2.1-3.5.6-5.6-2.1 1.6-2.1 3.2-1.2 5.5-1.2-1.4-3.2-.6-2.5 1.6.9-1.4 2.1-.5 1.9.8-.2 1.1-1.7 2.1-3.5 1.9-2.7-.2-2.9-2.1-2.9-3.6.7-.1 1.9.5 2.9 1.9l.4-4.3c-1.1 1.1-2.1 1.4-3.2 1.4.4-1.2 2.1-3 2.1-3h-5.4s1.7 1.9 2.1 3c-1.1 0-2.1-.2-3.2-1.4l.4 4.3c1-1.4 2.2-2 2.9-1.9-.1 1.5-.2 3.4-2.9 3.6-1.9.2-3.4-.8-3.5-1.9-.2-1.3 1-2.2 1.9-.8.7-2.3-1.2-3-2.5-1.6.9-2.2.9-3.9-1.2-5.5-1.5 2-1.3 3.7.6 5.6-1.2-.7-3.1 0-2 2.3.6-1.4 1.8-1.1 2.1.1.2.9-.3 1.9-1.5 2.1-.9.2-2.4-.5-3.5-3 .6 0 1.2.3 2 .9l-1.2-4c-.3 1.1-.7 1.9-1.1 2.3-.3-.8-.2-1.4 0-2.7l-2.9.9C1.3 23 2.6 25.5 3.7 30c3.7-.5 7.9-.8 12.3-.8"></path>
            </svg>
            <!--<![endif]-->
            <span class="one-login-header__logotype-text">
              Defra
            </span>
            <span class="one-login-header__product-name">
              Forms Designer <strong class="govuk-tag govuk-tag--green app-tag--env">
  Local
</strong>
            </span>
          </span>
        </a>
      </div>
      <button type="button"
        aria-controls="one-login-header__nav"
        aria-label="Show account menu"
        data-open-class="cross-service-header__button--open"
        data-label-for-show="Show account menu"
        data-label-for-hide="Hide account menu"
        aria-expanded="false"
        class="cross-service-header__button cross-service-header__button--one-login js-x-header-toggle">
        <span class="cross-service-header__button-content">Account</span>
                    <span class="cross-service-header__button-icon cross-service-header__button-icon--default">
            <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg" focusable="false" aria-hidden="true">
              <circle cx="11" cy="11" r="11" fill="white"/>
              <path fill-rule="evenodd" clip-rule="evenodd" d="M3.29297 18.8487C4.23255 15.4753 7.32741 13 11.0004 13C14.6731 13 17.7678 15.4749 18.7076 18.848C17.8058 19.7338 16.752 20.4654 15.5889 21H11.0004H6.41097C5.24819 20.4655 4.19463 19.7342 3.29297 18.8487Z" fill="#008531"/>
              <circle cx="11" cy="7.75" r="3.75" fill="#008531"/>
              <circle cx="11" cy="11" r="10" stroke="white" stroke-width="2"/>
            </svg>
          </span>
                    <span class="cross-service-header__button-icon cross-service-header__button-icon--focus">
            <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg" focusable="false" aria-hidden="true">
              <circle cx="11" cy="11" r="11" fill="black"/>
              <path fill-rule="evenodd" clip-rule="evenodd" d="M3.29297 18.8487C4.23255 15.4753 7.32741 13 11.0004 13C14.6731 13 17.7678 15.4749 18.7076 18.848C17.8058 19.7338 16.752 20.4654 15.5889 21H11.0004H6.41097C5.24819 20.4655 4.19463 19.7342 3.29297 18.8487Z" fill="white"/>
              <circle cx="11" cy="7.75" r="3.75" fill="white"/>
              <circle cx="11" cy="11" r="10" stroke="black" stroke-width="2"/>
            </svg>
          </span>
      </button>
      <nav aria-label="Account menu" class="one-login-header__nav" data-open-class="one-login-header__nav--open" id="one-login-header__nav">
        <ul class="one-login-header__nav__list">
          <li class="one-login-header__nav__list-item">
            <a class="one-login-header__nav__link one-login-header__nav__link--one-login" href="/library">
              <span class="one-login-header__nav__link-content">
                Sign in
              </span>
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
  <!-- Start of service navigation -->
  <div class="service-header" data-one-login-header-nav>
    <div class="govuk-width-container app-width-container--wide">
      <div class="service-header__container">        <div>
          <!-- Label the toggle button appropriately (you might want to use the name of your service) to provide support for screen reader users -->
          <button type="button"
            aria-controls="service-header__nav"
            data-open-class="cross-service-header__button--open"
            aria-label="Show service navigation menu"
            data-label-for-show="Show service navigation menu"
            data-label-for-hide="Hide service navigation menu"
            data-text-for-show="Menu"
            data-text-for-hide="Close"
            aria-expanded="false"
            class="cross-service-header__button cross-service-header__button--service-header js-x-header-toggle">
            <span class="service-header__button-content">Menu</span>
          </button>
          <!-- Important! Label your navigation appropriately! When there are multiple navigation landmarks on a page, additional labelling is required to provide support for screen reader users -->
          <nav aria-label=" menu">
            <ul class="service-header__nav-list service-header__nav" id="service-header__nav" data-open-class="service-header__nav--open">              <!-- Use the "service-header__nav-list-item--active" modifier class on the li to visually highlight the page the user is currently viewing -->
              <li class="service-header__nav-list-item">
                <!-- Use the aria-current="page" attribute on the anchor tag -->
                <a class="service-header__nav-list-item-link"                  href="/">
                  Home
                </a>
              </li>              <!-- Use the "service-header__nav-list-item--active" modifier class on the li to visually highlight the page the user is currently viewing -->
              <li class="service-header__nav-list-item service-header__nav-list-item--active">
                <!-- Use the aria-current="page" attribute on the anchor tag -->
                <a class="service-header__nav-list-item-link"aria-current="page"                  href="/features">
                  Features
                </a>
              </li>              <!-- Use the "service-header__nav-list-item--active" modifier class on the li to visually highlight the page the user is currently viewing -->
              <li class="service-header__nav-list-item">
                <!-- Use the aria-current="page" attribute on the anchor tag -->
                <a class="service-header__nav-list-item-link"                  href="/making-a-form">
                  Making a form
                </a>
              </li>              <!-- Use the "service-header__nav-list-item--active" modifier class on the li to visually highlight the page the user is currently viewing -->
              <li class="service-header__nav-list-item">
                <!-- Use the aria-current="page" attribute on the anchor tag -->
                <a class="service-header__nav-list-item-link"                  href="/support">
                  Support
                </a>
              </li>            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
  <!-- End of service navigation -->
</header>


  <meta name="robots" content="noindex, nofollow">


<div id="main-content" class="app-masthead">
  <div class="govuk-width-container app-width-container--wide">
    <div class="govuk-grid-row">
      <div class="govuk-grid-column-two-thirds-from-desktop">
        <h1 class="app-masthead__heading govuk-heading-xl">
          Features
        </h1>
        
      </div>
    </div>
  </div>
</div>


  <main class="govuk-main-wrapper" id="main-content">

  <div>
    <div class="govuk-width-container">
      <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
          <div class="app-prose-scope">
            <p>
              Defra Forms makes it easy and cost effective to move traditional forms online, creating interactive GOV.UK services that are simple for customers to use and faster for Defra teams to manage.
            </p>
            <p>
              We provide two products: Defra Form Designer and the Developer Plugin.
            </p>
            <h2>Defra Form Designer</h2>
            <h3>Features</h3>
            <h4>Form creation</h4>
            <p>
              A broad range of question types designed to meet government standards, including names, dates, addresses and reference numbers. There are also lists, multiple choice options, yes/no answers and guidance pages.
            </p>
            <h4>Conditions</h4>
            <p>
              Defra Forms has a powerful conditions feature that means that users will only see the questions that are relevant to them. Conditions can be simple or advanced, and we provide guidance on how to get the most out of them.
            </p>
            <h4>Locations and maps</h4>
            <p>
              Let users provide location information, such as grid references, easting and northing, postcodes or addresses. There is also a map feature which lets users add pins to a map, or draw shapes.
            </p>
            <h4>File upload</h4>
            <p>
              Let users upload files in any format, up to 99.9mb in size.
            </p>
            <h4>Payments</h4>
            <p>
              Defra Forms is integrated with GOV.UK Pay so your form can now take card payments, if your team is set up with a Worldpay account.
            </p>
            <h4>Delivery formats</h4>
            <p>
              Receive form submissions in a way that suits your team and processing:
            </p>
            <ul>
              <li>Human-readable email for teams who manage submissions manually</li>
              <li>Machine-readable JSON emails for automated integration with your team's systems</li>
              <li>Export all form responses to Excel format</li>
              <li>Integrate form submissions directly into a Sharepoint list</li>
            </ul>
            <p>
              Contact <a href="mailto:defraforms@defra.gov.uk">defraforms@defra.gov.uk</a> for access to Defra Form Designer.
            <h2>Developer Plugin</h2>
            <p>
              For developers who need to integrate form capabilities directly into their existing applications and systems. <a href="https://defra.github.io/forms-engine-plugin/">More about the Developer Plugin on Github</a>
            </p>
            <h3>Features</h3>
            <h4>Seamless Integration</h4>
            <p>
              Integrate forms directly into your existing applications with minimal setup and configuration.
            </p>
            <h4>API-first design</h4>
            <p>
              Built with developers in mind, featuring comprehensive APIs for form creation, management, and data retrieval.
            </p>
            <h4>Custom styling</h4>
            <p>
              Full control over form appearance and styling to match your application's design system.
            </p>
            <h3>Perfect for:</h3>
              <ul>
                <li>Web applications requiring embedded forms</li>
                <li>Internal tools and dashboards</li>
                <li>Customer portals and self-service systems</li>
                <li>Multi-tenant SaaS applications</li>
                <li>Applications with custom authentication</li>
                <li>Systems requiring real-time form updates</li>
                <li>Applications needing custom validation rules</li>
                <li>High-traffic websites and applications</li>
              </ul>
          </div>
        </div>
      </div>
    </div>
  </div>

  </main>





  <footer class="govuk-footer">
  <div class="govuk-width-container app-width-container--wide">
    <div class="govuk-footer__meta">
      <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
        <h2 class="govuk-visually-hidden">Support links</h2>
        <ul class="govuk-footer__inline-list">
          <li class="govuk-footer__inline-list-item">
            <a class="govuk-footer__link" href="/help/accessibility-statement">
              Accessibility statement
            </a>
          </li>
          <li class="govuk-footer__inline-list-item">
            <a class="govuk-footer__link" href="/help/cookies">
              Cookies
            </a>
          </li>
        </ul>
          <svg
            aria-hidden="true"
            focusable="false"
            class="govuk-footer__licence-logo"
            xmlns="http://www.w3.org/2000/svg"
            viewBox="0 0 483.2 195.7"
            height="17"
            width="41"
          >
            <path
              fill="currentColor"
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
            />
          </svg>
          <span class="govuk-footer__licence-description">
            All content is available under the
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >Open Government Licence v3.0</a>, except where otherwise stated
          </span>
      </div>
      <div class="govuk-footer__meta-item">
        <a
          class="govuk-footer__link govuk-footer__copyright-logo"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
        >
          © Crown copyright
        </a>
      </div>
    </div>
  </div>
</footer>


  <script type="module" src="/application.js"></script>
  </body>
</html>
"
`;

exports[`Health check route /making-a-form/what-makes-a-good-form should load Make a form live checklist 1`] = `
"<!DOCTYPE html>
<html lang="en" class="govuk-template">
  <head>
    <meta charset="utf-8">
    <title>Defra Forms: What makes a good form - Forms designer</title>
    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
    <meta name="theme-color" content="#0b0c0c">

      <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico">
      <link rel="icon" sizes="any" href="/assets/images/favicon.svg" type="image/svg+xml">
      <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c">
      <link rel="apple-touch-icon" href="/assets/images/govuk-icon-180.png">
      <link rel="manifest" href="/assets/manifest.json">

  <meta name="application-name" content="@defra/forms-designer" data-environment="local">
  <meta name="robots" content="noindex, nofollow">
  <link href="/stylesheets/application.scss" rel="stylesheet">

  </head>
  <body class="govuk-template__body defra-forms-website">
    <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>

      <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>


<header class="cross-service-header" role="banner" data-module="one-login-header">
  <div class="one-login-header" data-one-login-header-nav>
    <div class="one-login-header__container govuk-width-container app-width-container--wide">
      <div class="one-login-header__logo">
        <a href="/" class="one-login-header__link one-login-header__link--homepage">
          <span class="one-login-header__logotype">
            <!--[if gt IE 8]><!-->
              <svg
                aria-hidden="true"
                focusable="false"
                class="one-login-header__logotype-crown"
                xmlns="http://www.w3.org/2000/svg"
                viewBox="0 0 32 30"
                height="30"
                width="32">
                <path fill="currentColor" fill-rule="evenodd" d="M22.6 10.4c-1 .4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s-.1 2-1 2.4m-5.9 6.7c-.9.4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s-.1 2-1 2.4m10.8-3.7c-1 .4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s0 2-1 2.4m3.3 4.8c-1 .4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s-.1 2-1 2.4M17 4.7l2.3 1.2V2.5l-2.3.7-.2-.2.9-3h-3.4l.9 3-.2.2c-.1.1-2.3-.7-2.3-.7v3.4L15 4.7c.1.1.1.2.2.2l-1.3 4c-.1.2-.1.4-.1.6 0 1.1.8 2 1.9 2.2h.7c1-.2 1.9-1.1 1.9-2.1 0-.2 0-.4-.1-.6l-1.3-4c-.1-.2 0-.2.1-.3m-7.6 5.7c.9.4 2-.1 2.4-1 .4-.9-.1-2-1-2.4-.9-.4-2 .1-2.4 1s0 2 1 2.4m-5 3c.9.4 2-.1 2.4-1 .4-.9-.1-2-1-2.4-.9-.4-2 .1-2.4 1s.1 2 1 2.4m-3.2 4.8c.9.4 2-.1 2.4-1 .4-.9-.1-2-1-2.4-.9-.4-2 .1-2.4 1s0 2 1 2.4m14.8 11c4.4 0 8.6.3 12.3.8 1.1-4.5 2.4-7 3.7-8.8l-2.5-.9c.2 1.3.3 1.9 0 2.7-.4-.4-.8-1.1-1.1-2.3l-1.2 4c.7-.5 1.3-.8 2-.9-1.1 2.5-2.6 3.1-3.5 3-1.1-.2-1.7-1.2-1.5-2.1.3-1.2 1.5-1.5 2.1-.1 1.1-2.3-.8-3-2-2.3 1.9-1.9 2.1-3.5.6-5.6-2.1 1.6-2.1 3.2-1.2 5.5-1.2-1.4-3.2-.6-2.5 1.6.9-1.4 2.1-.5 1.9.8-.2 1.1-1.7 2.1-3.5 1.9-2.7-.2-2.9-2.1-2.9-3.6.7-.1 1.9.5 2.9 1.9l.4-4.3c-1.1 1.1-2.1 1.4-3.2 1.4.4-1.2 2.1-3 2.1-3h-5.4s1.7 1.9 2.1 3c-1.1 0-2.1-.2-3.2-1.4l.4 4.3c1-1.4 2.2-2 2.9-1.9-.1 1.5-.2 3.4-2.9 3.6-1.9.2-3.4-.8-3.5-1.9-.2-1.3 1-2.2 1.9-.8.7-2.3-1.2-3-2.5-1.6.9-2.2.9-3.9-1.2-5.5-1.5 2-1.3 3.7.6 5.6-1.2-.7-3.1 0-2 2.3.6-1.4 1.8-1.1 2.1.1.2.9-.3 1.9-1.5 2.1-.9.2-2.4-.5-3.5-3 .6 0 1.2.3 2 .9l-1.2-4c-.3 1.1-.7 1.9-1.1 2.3-.3-.8-.2-1.4 0-2.7l-2.9.9C1.3 23 2.6 25.5 3.7 30c3.7-.5 7.9-.8 12.3-.8"></path>
            </svg>
            <!--<![endif]-->
            <span class="one-login-header__logotype-text">
              Defra
            </span>
            <span class="one-login-header__product-name">
              Forms Designer <strong class="govuk-tag govuk-tag--green app-tag--env">
  Local
</strong>
            </span>
          </span>
        </a>
      </div>
      <button type="button"
        aria-controls="one-login-header__nav"
        aria-label="Show account menu"
        data-open-class="cross-service-header__button--open"
        data-label-for-show="Show account menu"
        data-label-for-hide="Hide account menu"
        aria-expanded="false"
        class="cross-service-header__button cross-service-header__button--one-login js-x-header-toggle">
        <span class="cross-service-header__button-content">Account</span>
                    <span class="cross-service-header__button-icon cross-service-header__button-icon--default">
            <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg" focusable="false" aria-hidden="true">
              <circle cx="11" cy="11" r="11" fill="white"/>
              <path fill-rule="evenodd" clip-rule="evenodd" d="M3.29297 18.8487C4.23255 15.4753 7.32741 13 11.0004 13C14.6731 13 17.7678 15.4749 18.7076 18.848C17.8058 19.7338 16.752 20.4654 15.5889 21H11.0004H6.41097C5.24819 20.4655 4.19463 19.7342 3.29297 18.8487Z" fill="#008531"/>
              <circle cx="11" cy="7.75" r="3.75" fill="#008531"/>
              <circle cx="11" cy="11" r="10" stroke="white" stroke-width="2"/>
            </svg>
          </span>
                    <span class="cross-service-header__button-icon cross-service-header__button-icon--focus">
            <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg" focusable="false" aria-hidden="true">
              <circle cx="11" cy="11" r="11" fill="black"/>
              <path fill-rule="evenodd" clip-rule="evenodd" d="M3.29297 18.8487C4.23255 15.4753 7.32741 13 11.0004 13C14.6731 13 17.7678 15.4749 18.7076 18.848C17.8058 19.7338 16.752 20.4654 15.5889 21H11.0004H6.41097C5.24819 20.4655 4.19463 19.7342 3.29297 18.8487Z" fill="white"/>
              <circle cx="11" cy="7.75" r="3.75" fill="white"/>
              <circle cx="11" cy="11" r="10" stroke="black" stroke-width="2"/>
            </svg>
          </span>
      </button>
      <nav aria-label="Account menu" class="one-login-header__nav" data-open-class="one-login-header__nav--open" id="one-login-header__nav">
        <ul class="one-login-header__nav__list">
          <li class="one-login-header__nav__list-item">
            <a class="one-login-header__nav__link one-login-header__nav__link--one-login" href="/library">
              <span class="one-login-header__nav__link-content">
                Sign in
              </span>
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
  <!-- Start of service navigation -->
  <div class="service-header" data-one-login-header-nav>
    <div class="govuk-width-container app-width-container--wide">
      <div class="service-header__container">        <div>
          <!-- Label the toggle button appropriately (you might want to use the name of your service) to provide support for screen reader users -->
          <button type="button"
            aria-controls="service-header__nav"
            data-open-class="cross-service-header__button--open"
            aria-label="Show service navigation menu"
            data-label-for-show="Show service navigation menu"
            data-label-for-hide="Hide service navigation menu"
            data-text-for-show="Menu"
            data-text-for-hide="Close"
            aria-expanded="false"
            class="cross-service-header__button cross-service-header__button--service-header js-x-header-toggle">
            <span class="service-header__button-content">Menu</span>
          </button>
          <!-- Important! Label your navigation appropriately! When there are multiple navigation landmarks on a page, additional labelling is required to provide support for screen reader users -->
          <nav aria-label=" menu">
            <ul class="service-header__nav-list service-header__nav" id="service-header__nav" data-open-class="service-header__nav--open">              <!-- Use the "service-header__nav-list-item--active" modifier class on the li to visually highlight the page the user is currently viewing -->
              <li class="service-header__nav-list-item">
                <!-- Use the aria-current="page" attribute on the anchor tag -->
                <a class="service-header__nav-list-item-link"                  href="/">
                  Home
                </a>
              </li>              <!-- Use the "service-header__nav-list-item--active" modifier class on the li to visually highlight the page the user is currently viewing -->
              <li class="service-header__nav-list-item">
                <!-- Use the aria-current="page" attribute on the anchor tag -->
                <a class="service-header__nav-list-item-link"                  href="/features">
                  Features
                </a>
              </li>              <!-- Use the "service-header__nav-list-item--active" modifier class on the li to visually highlight the page the user is currently viewing -->
              <li class="service-header__nav-list-item service-header__nav-list-item--active">
                <!-- Use the aria-current="page" attribute on the anchor tag -->
                <a class="service-header__nav-list-item-link"aria-current="page"                  href="/making-a-form">
                  Making a form
                </a>
              </li>              <!-- Use the "service-header__nav-list-item--active" modifier class on the li to visually highlight the page the user is currently viewing -->
              <li class="service-header__nav-list-item">
                <!-- Use the aria-current="page" attribute on the anchor tag -->
                <a class="service-header__nav-list-item-link"                  href="/support">
                  Support
                </a>
              </li>            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
  <!-- End of service navigation -->
</header>


  <meta name="robots" content="noindex, nofollow">

  
<div id="main-content" class="app-masthead">
  <div class="govuk-width-container app-width-container--wide">
    <div class="govuk-grid-row">
      <div class="govuk-grid-column-two-thirds-from-desktop">
        <h1 class="app-masthead__heading govuk-heading-xl">
          <span class="app-masthead__caption govuk-caption-l">Making a form</span>
          What makes a good form
        </h1>
        
      </div>
    </div>
  </div>
</div>


  <main class="govuk-main-wrapper" id="main-content">

  <div>
    <div class="govuk-width-container">
      <div class="govuk-grid-row">
        <div class="govuk-grid-column-one-quarter">
<nav class="x-govuk-sub-navigation" aria-labelledby="sub-navigation-heading">
  <h2 class="govuk-visually-hidden" id="sub-navigation-heading">Pages in this section</h2>
  <ul class="x-govuk-sub-navigation__section">
    <li class="x-govuk-sub-navigation__section-item x-govuk-sub-navigation__section-item--current">
      <a class="x-govuk-sub-navigation__link" href="/making-a-form/what-makes-a-good-form" aria-current="true">What makes a good form</a>
    </li>
    <li class="x-govuk-sub-navigation__section-item">
      <a class="x-govuk-sub-navigation__link" href="/making-a-form/get-the-right-people-together">Get the right people together</a>
    </li>
    <li class="x-govuk-sub-navigation__section-item">
      <a class="x-govuk-sub-navigation__link" href="/making-a-form/plan-to-receive-online-submissions">Plan to receive digital submissions</a>
    </li>
    <li class="x-govuk-sub-navigation__section-item">
      <a class="x-govuk-sub-navigation__link" href="/making-a-form/only-ask-for-information-you-need">Only ask for information you need</a>
    </li>
    <li class="x-govuk-sub-navigation__section-item">
      <a class="x-govuk-sub-navigation__link" href="/making-a-form/plan-your-form">Plan your form</a>
    </li>
    <li class="x-govuk-sub-navigation__section-item">
      <a class="x-govuk-sub-navigation__link" href="/making-a-form/adapting-a-pdf-or-paper-form-to-a-digital-form">Adapting a PDF or paper form to a digital form</a>
    </li>
    <li class="x-govuk-sub-navigation__section-item">
      <a class="x-govuk-sub-navigation__link" href="/making-a-form/take-payments">Take payments</a>
    </li>
  </ul>
</nav>


</div>
        <div class="govuk-grid-column-two-thirds">
          <div class="app-prose-scope">
            <h2>Good forms have a single purpose</h2>
            <p>
              An online form that tries to achieve multiple outcomes (for example,
              registering for a scheme and also claiming for a payment through
              that scheme) can be confusing to users and difficult for policy
              teams to maintain. Focus on a single outcome and design a form that
              is easy to complete and process.
            </p>
            <h2>Good forms are easy to complete</h2>
            <p>
              Forms that ask for long written answers are not recommended as team
              members would still need to read and process the detail. Forms can
              be designed to give structured data. This means, for example,
              picking answers from lists rather than asking users to type the
              information in. This can reduce the amount of thinking the user has
              to do and the time that your team has to spend reading and
              interpreting the data.
            </p>
            <p>
              For questions which require written descriptions or explanations,
              make the questions specific, so users know what information to
              include.
            </p>
            <h2>Good forms are simple</h2>
            <p>
              You can make both simple and more complex forms using the Defra Form
              Designer. However, the Defra Forms team recommends including as few
              conditional questions as possible, as changing them can become
              difficult (for example, if part of a policy changes). So, do not
              make a form more complicated than it needs to be to meet the users’
              needs.
            </p>
            <h2>
              Good forms gather the critical information that’s needed from the
              user quickly
            </h2>
            <p>
              If a form is part of a multi-stage process, and you may need further
              information from the user after the initial form has been completed
              and submitted, make sure your form:
            </p>
            <ul>
              <li>
                collects enough information for a team member to process the first
                stage
              </li>
              <li>
                includes a question in the form that asks the user for their
                contact details
              </li>
            </ul>
            <h2>Common mistakes in forms</h2>
            <p>Avoid these errors.</p>
            <ul>
              <li>
                Asking for multiple types of contact information when you only
                need one
              </li>
              <li>
                Asking for contact information, like a phone number, with no way
                to call
              </li>
              <li>
                Asking for a title alongside name when it is not needed. Only ask
                for someone's title if it is needed for legal reasons
              </li>
              <li>
                Using the word please in hint text, or overly long hint text
              </li>
              <li>
                Replicating phone call scripts and PDF forms without reviewing
                form structure and questions
              </li>
            </ul>
            <div>
              <img
                src="/assets/images/website/guidance_images/structured_question_example.png"
                class="govuk-!-width-full"
                alt="Two different ways of asking the question ‘Type of organisation’. The first, a long written answer, shows a large text box with the hint text ‘Briefly explain the type of organisation’. The second way shows 4 options in a radio button list – Limited company, Charity, Trust and Social enterprise. The hint text says ‘Select one option’."
              />
            </div>
            <h2>Making inclusive forms</h2>
            <p>
              Since 23 September 2018 all public sector websites and apps need to
              meet accessibility standards and publish an
              <a
                href="https://www.gov.uk/guidance/make-your-website-or-app-accessible-and-publish-an-accessibility-statement"
                >accessibility statement</a
              >. Online forms also need to comply with the standards.
            </p>
            <h3>Accessibility statement for forms</h3>
            <p>
              If you use a government form building tool like the Defra Form
              Designer or GOV.UK Forms, your form is usually covered by the tool’s
              accessibility statement.
            </p>
            <h3>Assistive technology</h3>
            <p>
              Some people might use assistive technology to complete online forms.
              You can:
            </p>
            <ul>
              <li>
                <a
                  href="https://business.scope.org.uk/assistive-technology-devices-definitions-how-disabled-people-use-the-web/"
                  >learn about assistive technology</a
                >
              </li>
              <li>
                <a
                  href="https://www.gov.uk/service-manual/user-research/running-research-sessions-with-people-with-disabilities"
                  >research your form with disabled people and assistive
                  technology users</a
                >
              </li>
              <li>
                ask the Defra Forms team to assess your form for any accessibility
                issues
              </li>
            </ul>
            <h3>Asking for personal information</h3>
            <p>
              Consider the sensitivities around personal questions. 'Easy'
              questions might be hard for some people to answer. Don’t assume
              people can complete a form independently. They may need help from:
            </p>
            <ul>
              <li>friends and family</li>
              <li>charities and citizens advice</li>
              <li>farm management companies</li>
              <li>accountants</li>
            </ul>
            <p>
              If asking for personal data is a legal requirement, ask only for
              what the law requires.
            </p>
            <p>
              Learn more about
              <a
                href="https://www.gov.uk/government/publications/working-definition-of-trauma-informed-practice/working-definition-of-trauma-informed-practice"
                >trauma informed practice</a
              >.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>

  </main>





  <footer class="govuk-footer">
  <div class="govuk-width-container app-width-container--wide">
    <div class="govuk-footer__meta">
      <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
        <h2 class="govuk-visually-hidden">Support links</h2>
        <ul class="govuk-footer__inline-list">
          <li class="govuk-footer__inline-list-item">
            <a class="govuk-footer__link" href="/help/accessibility-statement">
              Accessibility statement
            </a>
          </li>
          <li class="govuk-footer__inline-list-item">
            <a class="govuk-footer__link" href="/help/cookies">
              Cookies
            </a>
          </li>
        </ul>
          <svg
            aria-hidden="true"
            focusable="false"
            class="govuk-footer__licence-logo"
            xmlns="http://www.w3.org/2000/svg"
            viewBox="0 0 483.2 195.7"
            height="17"
            width="41"
          >
            <path
              fill="currentColor"
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
            />
          </svg>
          <span class="govuk-footer__licence-description">
            All content is available under the
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >Open Government Licence v3.0</a>, except where otherwise stated
          </span>
      </div>
      <div class="govuk-footer__meta-item">
        <a
          class="govuk-footer__link govuk-footer__copyright-logo"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
        >
          © Crown copyright
        </a>
      </div>
    </div>
  </div>
</footer>


  <script type="module" src="/application.js"></script>
  </body>
</html>
"
`;

exports[`Health check route /support should shows the Defra Forms Website Support page 1`] = `
"<!DOCTYPE html>
<html lang="en" class="govuk-template">
  <head>
    <meta charset="utf-8">
    <title>Defra Forms: Support - Forms designer</title>
    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
    <meta name="theme-color" content="#0b0c0c">

      <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico">
      <link rel="icon" sizes="any" href="/assets/images/favicon.svg" type="image/svg+xml">
      <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c">
      <link rel="apple-touch-icon" href="/assets/images/govuk-icon-180.png">
      <link rel="manifest" href="/assets/manifest.json">

  <meta name="application-name" content="@defra/forms-designer" data-environment="local">
  <meta name="robots" content="noindex, nofollow">
  <link href="/stylesheets/application.scss" rel="stylesheet">

  </head>
  <body class="govuk-template__body defra-forms-website">
    <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>

      <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>


<header class="cross-service-header" role="banner" data-module="one-login-header">
  <div class="one-login-header" data-one-login-header-nav>
    <div class="one-login-header__container govuk-width-container app-width-container--wide">
      <div class="one-login-header__logo">
        <a href="/" class="one-login-header__link one-login-header__link--homepage">
          <span class="one-login-header__logotype">
            <!--[if gt IE 8]><!-->
              <svg
                aria-hidden="true"
                focusable="false"
                class="one-login-header__logotype-crown"
                xmlns="http://www.w3.org/2000/svg"
                viewBox="0 0 32 30"
                height="30"
                width="32">
                <path fill="currentColor" fill-rule="evenodd" d="M22.6 10.4c-1 .4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s-.1 2-1 2.4m-5.9 6.7c-.9.4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s-.1 2-1 2.4m10.8-3.7c-1 .4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s0 2-1 2.4m3.3 4.8c-1 .4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s-.1 2-1 2.4M17 4.7l2.3 1.2V2.5l-2.3.7-.2-.2.9-3h-3.4l.9 3-.2.2c-.1.1-2.3-.7-2.3-.7v3.4L15 4.7c.1.1.1.2.2.2l-1.3 4c-.1.2-.1.4-.1.6 0 1.1.8 2 1.9 2.2h.7c1-.2 1.9-1.1 1.9-2.1 0-.2 0-.4-.1-.6l-1.3-4c-.1-.2 0-.2.1-.3m-7.6 5.7c.9.4 2-.1 2.4-1 .4-.9-.1-2-1-2.4-.9-.4-2 .1-2.4 1s0 2 1 2.4m-5 3c.9.4 2-.1 2.4-1 .4-.9-.1-2-1-2.4-.9-.4-2 .1-2.4 1s.1 2 1 2.4m-3.2 4.8c.9.4 2-.1 2.4-1 .4-.9-.1-2-1-2.4-.9-.4-2 .1-2.4 1s0 2 1 2.4m14.8 11c4.4 0 8.6.3 12.3.8 1.1-4.5 2.4-7 3.7-8.8l-2.5-.9c.2 1.3.3 1.9 0 2.7-.4-.4-.8-1.1-1.1-2.3l-1.2 4c.7-.5 1.3-.8 2-.9-1.1 2.5-2.6 3.1-3.5 3-1.1-.2-1.7-1.2-1.5-2.1.3-1.2 1.5-1.5 2.1-.1 1.1-2.3-.8-3-2-2.3 1.9-1.9 2.1-3.5.6-5.6-2.1 1.6-2.1 3.2-1.2 5.5-1.2-1.4-3.2-.6-2.5 1.6.9-1.4 2.1-.5 1.9.8-.2 1.1-1.7 2.1-3.5 1.9-2.7-.2-2.9-2.1-2.9-3.6.7-.1 1.9.5 2.9 1.9l.4-4.3c-1.1 1.1-2.1 1.4-3.2 1.4.4-1.2 2.1-3 2.1-3h-5.4s1.7 1.9 2.1 3c-1.1 0-2.1-.2-3.2-1.4l.4 4.3c1-1.4 2.2-2 2.9-1.9-.1 1.5-.2 3.4-2.9 3.6-1.9.2-3.4-.8-3.5-1.9-.2-1.3 1-2.2 1.9-.8.7-2.3-1.2-3-2.5-1.6.9-2.2.9-3.9-1.2-5.5-1.5 2-1.3 3.7.6 5.6-1.2-.7-3.1 0-2 2.3.6-1.4 1.8-1.1 2.1.1.2.9-.3 1.9-1.5 2.1-.9.2-2.4-.5-3.5-3 .6 0 1.2.3 2 .9l-1.2-4c-.3 1.1-.7 1.9-1.1 2.3-.3-.8-.2-1.4 0-2.7l-2.9.9C1.3 23 2.6 25.5 3.7 30c3.7-.5 7.9-.8 12.3-.8"></path>
            </svg>
            <!--<![endif]-->
            <span class="one-login-header__logotype-text">
              Defra
            </span>
            <span class="one-login-header__product-name">
              Forms Designer <strong class="govuk-tag govuk-tag--green app-tag--env">
  Local
</strong>
            </span>
          </span>
        </a>
      </div>
      <button type="button"
        aria-controls="one-login-header__nav"
        aria-label="Show account menu"
        data-open-class="cross-service-header__button--open"
        data-label-for-show="Show account menu"
        data-label-for-hide="Hide account menu"
        aria-expanded="false"
        class="cross-service-header__button cross-service-header__button--one-login js-x-header-toggle">
        <span class="cross-service-header__button-content">Account</span>
                    <span class="cross-service-header__button-icon cross-service-header__button-icon--default">
            <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg" focusable="false" aria-hidden="true">
              <circle cx="11" cy="11" r="11" fill="white"/>
              <path fill-rule="evenodd" clip-rule="evenodd" d="M3.29297 18.8487C4.23255 15.4753 7.32741 13 11.0004 13C14.6731 13 17.7678 15.4749 18.7076 18.848C17.8058 19.7338 16.752 20.4654 15.5889 21H11.0004H6.41097C5.24819 20.4655 4.19463 19.7342 3.29297 18.8487Z" fill="#008531"/>
              <circle cx="11" cy="7.75" r="3.75" fill="#008531"/>
              <circle cx="11" cy="11" r="10" stroke="white" stroke-width="2"/>
            </svg>
          </span>
                    <span class="cross-service-header__button-icon cross-service-header__button-icon--focus">
            <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg" focusable="false" aria-hidden="true">
              <circle cx="11" cy="11" r="11" fill="black"/>
              <path fill-rule="evenodd" clip-rule="evenodd" d="M3.29297 18.8487C4.23255 15.4753 7.32741 13 11.0004 13C14.6731 13 17.7678 15.4749 18.7076 18.848C17.8058 19.7338 16.752 20.4654 15.5889 21H11.0004H6.41097C5.24819 20.4655 4.19463 19.7342 3.29297 18.8487Z" fill="white"/>
              <circle cx="11" cy="7.75" r="3.75" fill="white"/>
              <circle cx="11" cy="11" r="10" stroke="black" stroke-width="2"/>
            </svg>
          </span>
      </button>
      <nav aria-label="Account menu" class="one-login-header__nav" data-open-class="one-login-header__nav--open" id="one-login-header__nav">
        <ul class="one-login-header__nav__list">
          <li class="one-login-header__nav__list-item">
            <a class="one-login-header__nav__link one-login-header__nav__link--one-login" href="/library">
              <span class="one-login-header__nav__link-content">
                Sign in
              </span>
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
  <!-- Start of service navigation -->
  <div class="service-header" data-one-login-header-nav>
    <div class="govuk-width-container app-width-container--wide">
      <div class="service-header__container">        <div>
          <!-- Label the toggle button appropriately (you might want to use the name of your service) to provide support for screen reader users -->
          <button type="button"
            aria-controls="service-header__nav"
            data-open-class="cross-service-header__button--open"
            aria-label="Show service navigation menu"
            data-label-for-show="Show service navigation menu"
            data-label-for-hide="Hide service navigation menu"
            data-text-for-show="Menu"
            data-text-for-hide="Close"
            aria-expanded="false"
            class="cross-service-header__button cross-service-header__button--service-header js-x-header-toggle">
            <span class="service-header__button-content">Menu</span>
          </button>
          <!-- Important! Label your navigation appropriately! When there are multiple navigation landmarks on a page, additional labelling is required to provide support for screen reader users -->
          <nav aria-label=" menu">
            <ul class="service-header__nav-list service-header__nav" id="service-header__nav" data-open-class="service-header__nav--open">              <!-- Use the "service-header__nav-list-item--active" modifier class on the li to visually highlight the page the user is currently viewing -->
              <li class="service-header__nav-list-item">
                <!-- Use the aria-current="page" attribute on the anchor tag -->
                <a class="service-header__nav-list-item-link"                  href="/">
                  Home
                </a>
              </li>              <!-- Use the "service-header__nav-list-item--active" modifier class on the li to visually highlight the page the user is currently viewing -->
              <li class="service-header__nav-list-item">
                <!-- Use the aria-current="page" attribute on the anchor tag -->
                <a class="service-header__nav-list-item-link"                  href="/features">
                  Features
                </a>
              </li>              <!-- Use the "service-header__nav-list-item--active" modifier class on the li to visually highlight the page the user is currently viewing -->
              <li class="service-header__nav-list-item">
                <!-- Use the aria-current="page" attribute on the anchor tag -->
                <a class="service-header__nav-list-item-link"                  href="/making-a-form">
                  Making a form
                </a>
              </li>              <!-- Use the "service-header__nav-list-item--active" modifier class on the li to visually highlight the page the user is currently viewing -->
              <li class="service-header__nav-list-item service-header__nav-list-item--active">
                <!-- Use the aria-current="page" attribute on the anchor tag -->
                <a class="service-header__nav-list-item-link"aria-current="page"                  href="/support">
                  Support
                </a>
              </li>            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
  <!-- End of service navigation -->
</header>


  <meta name="robots" content="noindex, nofollow">


<div id="main-content" class="app-masthead">
  <div class="govuk-width-container app-width-container--wide">
    <div class="govuk-grid-row">
      <div class="govuk-grid-column-two-thirds-from-desktop">
        <h1 class="app-masthead__heading govuk-heading-xl">
          Support
        </h1>
        <p class="app-masthead__description govuk-body-l">
          If you're taking part in private beta, ask for support by sending a message to the <a href="https://teams.microsoft.com/l/channel/19:sLNy297i1n0fiPYsGJb3UoOITYURp7PtMx8iFwEfJWs1%40thread.tacv2/General?groupId=346d8ebd-c7b8-47d3-b178-e6a9b31c8fc2&amp;tenantId=770a2450-0227-4c62-90c7-4e38537f1102" class="govuk-link govuk-link--inverse govuk-link--no-visited-state">Microsoft Teams channel</a> or <a href="https://defra-digital-team.slack.com/archives/C080WP62PJP" class="govuk-link govuk-link--inverse govuk-link--no-visited-state">Defra Slack channel</a>.

        </p>
        
      </div>
    </div>
  </div>
</div>


  <main class="govuk-main-wrapper" id="main-content">

<div>
  <div class="govuk-width-container">
    <div class="govuk-grid-row">
      <div class="govuk-grid-column-two-thirds">
        <h2 class="govuk-heading-l">Support hours</h2>
        <p class="govuk-body">We are available to support you between 9am and 5pm Monday to Friday.</p>

        <h2 class="govuk-heading-l">General questions</h2>
        <p class="govuk-body">For general questions about Defra Forms, use the shared mailbox at <a href="mailto:defraforms@defra.gov.uk" class="govuk-link">defraforms@defra.gov.uk</a>.</p>
      </div>
    </div>
  </div>
</div>

  </main>





  <footer class="govuk-footer">
  <div class="govuk-width-container app-width-container--wide">
    <div class="govuk-footer__meta">
      <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
        <h2 class="govuk-visually-hidden">Support links</h2>
        <ul class="govuk-footer__inline-list">
          <li class="govuk-footer__inline-list-item">
            <a class="govuk-footer__link" href="/help/accessibility-statement">
              Accessibility statement
            </a>
          </li>
          <li class="govuk-footer__inline-list-item">
            <a class="govuk-footer__link" href="/help/cookies">
              Cookies
            </a>
          </li>
        </ul>
          <svg
            aria-hidden="true"
            focusable="false"
            class="govuk-footer__licence-logo"
            xmlns="http://www.w3.org/2000/svg"
            viewBox="0 0 483.2 195.7"
            height="17"
            width="41"
          >
            <path
              fill="currentColor"
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
            />
          </svg>
          <span class="govuk-footer__licence-description">
            All content is available under the
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >Open Government Licence v3.0</a>, except where otherwise stated
          </span>
      </div>
      <div class="govuk-footer__meta-item">
        <a
          class="govuk-footer__link govuk-footer__copyright-logo"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
        >
          © Crown copyright
        </a>
      </div>
    </div>
  </div>
</footer>


  <script type="module" src="/application.js"></script>
  </body>
</html>
"
`;
